--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,12 +3,25 @@
 <%- include('partials/_navigation.ejs') %>
 
 	<% if(user) { %>
+
+		<% if(user.role  === 'student') { %>
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1><%= user.name %><span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= user.name %><span class="m_1">STUDENT.</span></h1>
 		</div>
 	</div>
+		<% } %>	
+
 	
+		<% if(user.role  === 'teacher') { %>
+	<div class="all-title-box">
+		<div class="container text-center">
+			<h1><%= user.name %><span class="m_1">teacher.</span></h1>
+		</div>
+	</div>
+		<% } %>	
+
+
     <div id="overviews" class="section wb">
         <div class="container">
             <div class="row"> 
@@ -22,7 +35,7 @@
 							</p>
 						</div>
 						<div class="author-desc">
-							<img src="images/author.jpg" alt="about author">
+							<img src="/images/author.jpg" alt="about author">
 						</div>
 					</div>
 					
@@ -32,7 +45,7 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item mb-5">
 						<div class="image-blog">
-							<img src="images/blog_1.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_1.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
