--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,6 +21,12 @@
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                     <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                                 </div>
+                                <div class="offset-1 col-lg-10 col-md-10 col-sm-10" >
+                                    <select name="role" class="form-control">
+                                        <option value="teacher">teacher</option>
+                                        <option value="student">student</option>
+                                    </select>    
+                                </div>
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                     <button type="submit" value="LOGIN" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">REGISTER</button>
                                 </div>
