--- a/views/course.ejs
+++ b/views/course.ejs
@@ -21,6 +21,7 @@
           <div class="post-content">
             <div class="post-date">
 
+				<% if(user && !(user.courses.includes(course._id))) { %>	
               <form method="POST" action="/courses/enroll">
                 <input
                   type="hidden"
@@ -31,8 +32,8 @@
                   <span>ENROLL</span>
                 </button>
               </form>
+			  <% } %>
 
-			  	
             </div>
             <div class="meta-info-blog">
               <span
@@ -58,16 +59,16 @@
       <div class="col-lg-3 col-12 right-single">
         <div class="widget-search">
           <div class="site-search-area">
-            <form method="get" id="site-searchform" action="#">
+            <form method="GET" id="site-searchform" action="/courses">
               <div>
                 <input
                   class="input-text form-control"
-                  name="search-k"
+                  name="search"
                   id="search-k"
-                  placeholder="Search keywords..."
+                  placeholder="Search"
                   type="text"
                 />
-                <input id="searchsubmit" value="Search" type="submit" />
+                <button id="searchsubmit" value="Search" type="submit" ></button>
               </div>
             </form>
           </div>
