--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -82,6 +82,18 @@
 								</h1>
 							</div>
 						</div>
+						<div class="offset-1 col-lg-10 col-md-10 col-sm-10">
+							<% if (flashMessages) { %>
+								<% if (flashMessages.success) { %>
+								  <div class="alert alert-success">
+								<%= flashMessages.success %>
+								</div>
+							  <% } else if (flashMessages.error) { %>
+							   <div class="alert alert-danger">
+								<%= flashMessages.error %>
+								</div>
+								<% } %>
+							  <% } %>
 
 						<div id="overviews" class="section wb">
 							<div class="container">
@@ -122,26 +134,76 @@
 												<div class="course-desc">
 													<p><%= courses[i].description %></p>
 												</div>
+
+
+
+												<div class="clearfix">
+													<ul style="list-style-type:none;">
+														<button class="btn btn-primary rounded-0 text-white" data-toggle="modal" data-target="#updateCourse<%= courses[i]._id %>"><span>UPDATE</span></button>
+														<form enctype="application/x-www-form-urlencoded" method ="post" action="/courses/<%= courses[i].slug%>/del">
+															<input type="hidden" name="_method" value="DELETE">
+															<button class="btn btn-danger" type="submit">DELETE</button>
+														</form>
+													</ul>
+												</div>
 											</div>
+											
 										</div>
 									</div><!-- end col -->
-
-									<% } %>
-										<div class="course-item mb-5">
-											<div class="image-blog">
-												<img src="images/blog_2.jpg" alt="" class="img-fluid">
-											</div>
-											<div class="course-br">
-												<div class="course-title">
-													<h2><a href="course-single.html" title="">Hotel Management</a></h2>
-												</div>
-												<div class="blog-desc">
-													<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo
-														maiorum intel ogrets geuiat operts elicata libere avisse id
-														cumlegebat, liber regione eu sit.... </p>
+									<!-- update modal -->
+									<div class="modal fade" id="updateCourse<%=courses[i]._id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+										<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+											<div class="modal-content">
+												<div class="modal-body customer-box">
+													<!-- Tab panes -->
+													<div class="tab-content">
+														<div class="tab-pane active" id="Login">
+															<form method="POST" action="/courses/<%=courses[i].slug%>/update?_method=PUT" class="form-horizontal">
+																<div class="form-group">
+																	<div class="col-sm-12">
+																		<input type="text" name="name" value="<%=courses[i].name%>" class="form-control"  placeholder="Course Name">
+																	</div>
+																</div>
+																<div class="form-group">
+																	<div class="col-sm-12">
+																		<input type="hidden" name="role" class="form-control"  value="<%= user.role %>">
+																	</div>
+																</div>
+									
+																<div class="form-group">
+																	<div class="col-sm-12">
+																		<textarea rows="8" name="description" class="form-control"
+																		placeholder="Course Description" required><%=courses[i].description%></textarea>
+																	</div>
+																</div>
+																<div class="form-group">
+																	<div class="col-sm-12">
+																		<select class="form-control" name="category">
+																			<% for (let i=0; i< categories.length; i++) { %>
+																			<option value="<%= categories[i]._id %>"><%= categories[i].name %></option>
+																			<% } %>	
+																		</select>
+																	</div>
+																</div>
+																<div class="row">
+																	<div class="col-sm-10">
+																		<button type="submit" class="btn btn-light btn-radius btn-brd grd1">
+																			Submit
+																		</button>
+																		<button type="submit" class="btn btn-light btn-radius btn-brd grd1"
+																			data-dismiss="modal" aria-hidden="true">
+																			Cancel
+																		</button>
+																	</div>
+																</div>
+															</form>
+														</div>
+													</div>
 												</div>
 											</div>
 										</div>
+									</div>
+									<% } %>
 									</div><!-- end col -->
 								</div><!-- end row -->
 							</div><!-- end container -->
